force-app/main/default/objects/Submission_Email__c/Submission_Email__c.object-meta.xml
<CustomObject>
    <label>Submission Email</label>
    <nameField>
        <displayFormat>SE-{0000000}</displayFormat>
        <label>Submission Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>