force-app/main/default/objects/Submission_Email__c/fields/Attachment_Count__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Count__c</fullName>
    <label>Attachment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>