force-app/main/default/objects/Submission_Email__c/fields/Processing_Log__c.field-meta.xml
<CustomField>
    <fullName>Processing_Log__c</fullName>
    <label>Processing Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>