force-app/main/default/objects/Submission_Email__c/listViews/Submissions_Inbox.listView-meta.xml
<ListView>
    <fullName>Submissions_Inbox</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Submissions Inbox</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>